[package]

name = "railgun"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["web", "railgun", "hyper"]
build = "generate.rs"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.modifier]
git = "https://github.com/reem/rust-modifier.git"

[dependencies.typemap]
git = "https://github.com/reem/rust-typemap.git"

[dependencies.plugin]
git = "https://github.com/reem/rust-plugin.git"

[dependencies.url]
git = "https://github.com/servo/rust-url.git"

